--- a/includes/rest.yaml
+++ b/includes/rest.yaml
@@ -17,19 +17,19 @@ matrix_effect:
 atom_matrix_text:
   url: http://192.168.1.172/json/state
   method: POST
-  payload: '{"on":true, "bri": 128, "seg": [{"id": {{segment}}, "n": "{{text}}","fx":122,"pal":"~"}]}'
+  payload: '{"on":true, "bri": 40, "seg": [{"id": {{segment}}, "n": "{{text}}","fx":122,"pal":"~"}]}'
 atom_matrix_image:
   url: http://192.168.1.172/json/state
   method: POST
-  payload: '{"on":true, "bri": 128, "seg": {"id": {{segment}}, "i":[{{image}}]} }'
+  payload: '{"on":true, "bri": 40, "seg": {"id": {{segment}}, "i":[{{image}}], "rY": true} }'
 atom_matrix_default:
   url: http://192.168.1.172/json/state
   method: POST
-  payload: '{"on": true, "ps": 1, "bri": 128, "seg": {"n": ""}}'
+  payload: '{"on": true, "ps": 1, "bri": 40, "seg": {"n": ""}}'
 atom_matrix_effect:
   url: http://192.168.1.172/json/state
   method: POST
-  payload: '{"on": true, "bri": 128, "seg": {"id": {{segment}}, "fx": {{effect}} }}'  
+  payload: '{"on": true, "bri": 40, "seg": {"id": {{segment}}, "fx": {{effect}} }}'  
 solax_local_charge_battery_from_grid:
     url: !secret solax_local_ip
     method: post
@@ -45,4 +45,4 @@ solax_local_set_battery_min_soc:
 solax_local_set_period2_enable:
     url: !secret solax_local_ip
     method: post
-    payload: !secret solax_local_set_period2_enable_payload    
+    payload: !secret solax_local_set_period2_enable_payload
