Added: accuracy_decimals added to temp sensors

--- a/esphome/d1mini-motion-reu.yaml
+++ b/esphome/d1mini-motion-reu.yaml
@@ -47,6 +47,7 @@ sensor:
           - 24.1 -> 18.9
           - 24.2 -> 19.1
           - 24.8 -> 19.4
+    accuracy_decimals: 1
           
 binary_sensor:
   - platform: gpio
