--- a/automations.yaml
+++ b/automations.yaml
@@ -1607,7 +1607,8 @@
     state: 'on'
   - condition: template
     value_template: '{{[state_attr(''sensor.family_events'',''events'')[0]]|selectattr(''summary'',''contains'',''oliday'')|list|length
-      == 0}}'
+      == 0 and (as_timestamp(strptime(state_attr(''sensor.family_events'',''events'')[0].start,''%Y-%m-%d''))
+      | timestamp_local | as_datetime) < now}}'
   actions:
   - data:
       transition: 600
