--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -408,7 +408,7 @@
 
 ### Solax Local REST settings ###
 - platform: rest
-  scan_interval: 21600
+  scan_interval: 300
   resource: !secret solax_local_ip
   payload: !secret solax_local_settings_payload
   method: POST
@@ -422,7 +422,9 @@
   # 5 - Allowed discharge start
   # 6 - Allowed discharge end
   # 7 - Charge/discharge Period2 Enabled (0 for disabled, 1 for enabled)
-  value_template: "{{ '[' ~ value.split(',')[28] ~ ',' ~ value.split(',')[29] ~ ',' ~ value.split(',')[30] ~ ',' ~ value.split(',')[36] ~ ',' ~ value.split(',')[37] ~ ',' ~ value.split(',')[38] ~ ',' ~ value.split(',')[39] ~ ',' ~ value.split(',')[40] ~ ']' }}"
+  # 8 - Work Mode (0: self use, 1: feed in priority, 2: back up, 3: manual)
+  # 9 - Manual Mode (0: do nothing, 1: forced charge, 2: forced discharge)
+  value_template: "{{ '[' ~ value.split(',')[28] ~ ',' ~ value.split(',')[29] ~ ',' ~ value.split(',')[30] ~ ',' ~ value.split(',')[36] ~ ',' ~ value.split(',')[37] ~ ',' ~ value.split(',')[38] ~ ',' ~ value.split(',')[39] ~ ',' ~ value.split(',')[40] ~ ',' ~ value.split(',')[27] ~ ',' ~ value.split(',')[35] ~ ']' }}"
 
 
 
