--- a/automations.yaml
+++ b/automations.yaml
@@ -696,13 +696,12 @@
 - id: '1592899929119'
   alias: 'Lights: Turn off all bedroom lights at 8am'
   description: ''
-  trigger:
-  - at: 08:00:00
-    platform: time
-  condition: []
-  action:
-  - service: light.turn_off
-    metadata: {}
+  triggers:
+  - at: 08:30:00
+    trigger: time
+  conditions: []
+  actions:
+  - metadata: {}
     data: {}
     target:
       entity_id:
@@ -713,6 +712,7 @@
       - light.sebs_ceiling
       - light.main_bedroom_bloom
       - light.reubens_ceiling
+    action: light.turn_off
   mode: single
 - id: '1600335652412'
   alias: ESP32 Cam timelapse
@@ -5207,7 +5207,9 @@
   triggers:
   - trigger: template
     value_template: '{{ (state_attr(''binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session'',''next_event_start''))
-      < now()}}'
+      < (now()-timedelta(seconds=5))}}'
+    variables:
+      sessionDurationMinutes: '{{state_attr(''binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session'',''next_event_duration_in_minutes'')}}'
   conditions: []
   actions:
   - action: notify.tom_and_anna
@@ -5230,6 +5232,16 @@
     data:
       manual_mode: '{{ state_attr(''input_select.solax_manual_mode'',''options'').index(''Forced
         charge'')}}
+
+        '
+  - delay:
+      minutes: '{{sessionDurationMinutes}}
+
+        '
+  - action: rest_command.solax_local_set_inverter_mode
+    data:
+      inverter_mode: '{{ state_attr(''input_select.solax_inverter_mode'',''options'').index(''Self-use'')
+        }}
 
         '
   mode: single
