--- a/esphome/d1mini-motion-reu.yaml
+++ b/esphome/d1mini-motion-reu.yaml
@@ -7,6 +7,7 @@ wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
   domain: ".lan"
+  min_auth_mode: WPA2
   
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
