--- a/esphome/d1mini-motion-seb.yaml
+++ b/esphome/d1mini-motion-seb.yaml
@@ -8,7 +8,8 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
-  
+  min_auth_mode: WPA2
+    
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "${device_name}"
