--- a/esphome/tagreader-reu.yaml
+++ b/esphome/tagreader-reu.yaml
@@ -1,5 +1,6 @@
 # Insert your SSID and Your PWD after inital setup
 wifi:
+  min_auth_mode: WPA2
   networks:
     - ssid: !secret wifi_iot_ssid
       password: !secret wifi_password
