--- a/automations.yaml
+++ b/automations.yaml
@@ -4711,7 +4711,7 @@
   - value_template: '{{now().strftime("%H:%M %m %d") == "07:05 11 19"}}'
     trigger: template
     id: birthday
-  - value_template: '{{now().strftime("%H:%M %m %d") == "07:00 09 28"}}'
+  - value_template: '{{now().strftime("%H:%M %m %d") == "07:25 09 28"}}'
     trigger: template
     id: birthday
   - value_template: '{{now().strftime("%H:%M %m %d") == "07:00 10 26"}}'
@@ -4729,11 +4729,10 @@
       volume_level: 0.5
     action: media_player.volume_set
     target:
-      entity_id: media_player.upstairs
-  - data:
-      source: media_player.upstairs
-    action: media_player.select_source
-    target:
+      entity_id: media_player.whole_house
+  - action: media_player.select_source
+    data:
+      source: media_player.whole_house
       entity_id: media_player.ytube_music_player
   - choose:
     - conditions:
@@ -4991,6 +4990,12 @@
       device_id: abcdd35a9e1e4f0651b07b73cc92faae
       command: remote_button_double_press
     id: double-press
+  - trigger: event
+    event_type: zha_event
+    event_data:
+      device_id: abcdd35a9e1e4f0651b07b73cc92faae
+      command: remote_button_long_press
+    id: long_press
   conditions: []
   actions:
   - choose:
@@ -5014,6 +5019,17 @@
         data: {}
         target:
           entity_id: light.rname
+    - conditions:
+      - condition: trigger
+        id:
+        - long_press
+      sequence:
+      - action: light.turn_on
+        metadata: {}
+        data:
+          brightness_pct: 5
+        target:
+          device_id: 61f89eb89fac9724606bb7e0ffc52c9b
   mode: single
 - id: '1739546783292'
   alias: Restart OpenEPaperLink AP
@@ -5164,7 +5180,7 @@
   triggers:
   - trigger: time
     at:
-      entity_id: sensor.tom_s_phone_next_alarm
+      entity_id: sensor.toms_phone_next_alarm
       offset: -00:00:03
     id: tom
   conditions:
@@ -5184,7 +5200,7 @@
       title: ⏰Wake Up!
   - delay:
       hours: 0
-      minutes: 5
+      minutes: 10
       seconds: 0
       milliseconds: 0
   - action: light.turn_on
@@ -5234,16 +5250,14 @@
   description: ''
   triggers:
   - trigger: template
-    value_template: '{{ (state_attr(''binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session'',''next_event_start''))
+    value_template: '{{ (state_attr(''binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session'',''current_event_start''))
       < (now()-timedelta(seconds=5))}}'
-    variables:
-      sessionDurationMinutes: '{{state_attr(''binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session'',''next_event_duration_in_minutes'')}}'
   conditions: []
   actions:
   - action: notify.tom_and_anna
     data:
       title: ⚡Free electricity!
-      message: There is free electricity for the next {{ state_attr('binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session','next_event_duration_in_minutes')|int}}
+      message: There is free electricity for the next {{ state_attr('binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session','current_event_duration_in_minutes')|int}}
         minutes.
   - action: rest_command.solax_local_set_inverter_mode
     data:
@@ -5263,9 +5277,8 @@
 
         '
   - delay:
-      minutes: '{{sessionDurationMinutes}}
-
-        '
+      minutes: "{{ state_attr('binary_sensor.octopus_energy_a_ffeaa20a_octoplus_free_electricity_session','current_event_duration_in_minutes')|
+        int}} \n"
   - action: rest_command.solax_local_set_inverter_mode
     data:
       inverter_mode: '{{ state_attr(''input_select.solax_inverter_mode'',''options'').index(''Self-use'')
@@ -5299,4 +5312,22 @@
         }}
 
         '
+  mode: single
+- id: '1764331235834'
+  alias: 'Notify: Vacuum'
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - sensor.clyde_last_clean_end
+  conditions: []
+  actions:
+  - action: notify.mobile_app_toms_phone
+    metadata: {}
+    data:
+      message: Cleaned {{states('sensor.clyde_cleaning_area')}}sq m in {{states('sensor.clyde_cleaning_time')|round(2)}}
+        mins
+      data:
+        image: /api/image_proxy/image.clyde_downstairs
+      title: Clyde has finished cleaning
   mode: single
