--- a/esphome/light_d1mini_star.yaml
+++ b/esphome/light_d1mini_star.yaml
@@ -1,12 +1,14 @@
 esphome:
   name: light_d1mini_star
-  platform: ESP8266
+
+esp8266:
   board: d1_mini
   
 wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
+  min_auth_mode: WPA2
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
