--- a/automations/xmas.yaml
+++ b/automations/xmas.yaml
@@ -39,12 +39,12 @@
   trigger:
     - platform: state
       entity_id:
-        - binary_sensor.lumi_lumi_sensor_motion_aq2_occupancy
+        - input_boolean.living_room_occupancy
       to: "on"
       id: motion-detected
     - platform: state
       entity_id:
-        - binary_sensor.lumi_lumi_sensor_motion_aq2_occupancy
+        - input_boolean.living_room_occupancy
       to: "off"
       id: motion-clear
   condition:
